feat: 支持字符串数组填充

--- a/fills/templates/fills/index.html
+++ b/fills/templates/fills/index.html
@@ -12,7 +12,7 @@
 {% if filling_requirement_list %}
     <ul>
     {% for filling_requirement in filling_requirement_list %}
-        <li>{{ filling_requirement.username }}</li>
+        <li><a href="{% url 'fills:get_requirement' filling_requirement.id %}" target="_blank">{{ filling_requirement.username }}</a></li>
     {% endfor %}
     </ul>
 {% else %}
